--- a/find-idle/.gitignore
+++ b/find-idle/.gitignore
@@ -1,6 +1,9 @@
 
 # Created by https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
+samconfig.toml
+.aws-sam
+
 ### Linux ###
 *~
 
